# HackerLife

./: .breakpoints  DBswitch.py  app.py  banUsers.txt  challenges.db  duels.db  fakeCompanies.txt  makeChallengedDB.py  makeDuelsDB.py  makeRequestsDB.py  makeUsersDB.py  otherProblems.txt  problems.txt  pyproject.toml  replit_zip_error_log.txt  requests.db  sixLetter.txt  users.db  users2.db
.cache/nix/: binary-cache-v6.sqlite
.cache/replit/: __replit_disk_meta.json
.cache/replit/env/: latest  latest.json
.upm/: store.json
templates/: awards.html  bank.html  changepassword.html  command.html  companies.html  deleteaccount.html  finished.html  gamble.html  game.html  game2.html  inbox.html  index.html  leaderboard.html  lenditems.html  login.html  lotteries.html  menu.html  moneystore.html  problems.html  reportbugs.html  sentence.html  store.html  trophies.html  users.html  view.html
